frontend/src/components/compform/CompForm.css
.form-wrapper {
  display: flex;
  justify-content: center;
}

.form-container {
  width: 35vw;
  max-width: 600px;
  min-width: 300px;
  margin-top: 100px;
  margin-bottom: 50px;
  padding: 30px 30px 10px 30px;
  border: 1px solid #e0e0e0;
  border-radius: 12px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  background-color: #fff;
}

.form-container .MuiFormControl-root {
  margin-bottom: 20px;
}

.form-container .MuiFormGroup-root {
  margin-bottom: 20px;
}

.form-container .section-title {
  margin-bottom: 16px;
  text-align: center;
  font-weight: bold;
}

.additional-comp-btns-container {
  display: flex;
  gap: 12px;
  margin-bottom: 20px;
}

.additional-comp-btn {
  flex: 1;
  font-weight: bold;
  padding: 8px 16px;
  text-transform: none !important;
}

.salary-info-container {
  display: flex;
  gap: 16px;
  margin-bottom: 24px;
}

.file-upload-btn {
  text-transform: none !important;
}

.file-upload-container {
  display: flex;
  gap: 10px;
  margin-bottom: 10px;
}

.uploaded-file-info {
  display: flex;
  gap: 5px;
}

.yoe-input-container {
  margin-right: 10px;
}
.yoe-container {
  display: flex;
}

.payment-frequency-container {
  display: flex;
  align-items: last baseline;
}

.payment-frequency-checkboxes {
  margin-top: 0px;
  margin-left: 20px;
}

.submit-container {
  display: flex;
  justify-content: center;
  margin-bottom: 30px;
}

.sign-up-link-container {
  text-align: center;
}

#salaryInfoSection {
  margin-bottom: 0px;
}

#fileUploadCaption {
  display: block;
  margin-bottom: 10px;
}

.sign-up-link {
  text-decoration: underline;
}

@media (max-width: 1246px) {
  .form-container {
    width: 80vw;
    padding: 20px 15px 5px 15px;
  }
}

@media (max-width: 768px) {
  .form-container {
    width: 90vw;
    padding: 20px 15px 5px 15px;
  }

  .years-of-experience-input {
    width: 120px;
  }

  .additional-comp-btn {
    flex: 1 1 100%;
    font-size: 0.7rem;
  }
  .payment-frequency-checkboxes .MuiFormControlLabel-label {
    font-size: 12px;
  }

  .payment-frequency-checkboxes .MuiCheckbox-root {
    padding: 4px;
  }
}

